--- a/Angular2Demo.csproj
+++ b/Angular2Demo.csproj
@@ -73,6 +73,7 @@
     <Content Include="bs-config.json" />
     <Content Include="package.json" />
     <Content Include="src\app\app.component.html" />
+    <Content Include="src\app\employee\employee.component.html" />
     <Content Include="src\tsconfig.json" />
     <Content Include="tslint.json" />
     <None Include="Web.Debug.config">
@@ -98,6 +99,7 @@
     <TypeScriptCompile Include="src\app\app.component.spec.ts" />
     <TypeScriptCompile Include="src\app\app.component.ts" />
     <TypeScriptCompile Include="src\app\app.module.ts" />
+    <TypeScriptCompile Include="src\app\employee\employee.component.ts" />
     <TypeScriptCompile Include="src\main.ts" />
   </ItemGroup>
   <ItemGroup>
